# Projects-visualization

./: DB_connection.py  Inicio.py  README.md  connection_VE.py  connection_mysql_strlit.py  pyproject.toml  requirements.txt
pages/: 1_produccion.py
pruebas_st/: App_db.py  dashboard_1.py
scripts/: datos_siu1.py
